Correcting styling spillovers, moved overall stylings to App.css, minor styling tweaks in showfinder (#77)

--- a/client-frontend/src/App.css
+++ b/client-frontend/src/App.css
@@ -5,3 +5,25 @@
 body {
     background-color: #EEEDED;
 }
+input {
+    background-color: #e6e6e6;
+}
+
+label {
+    display: block;
+}
+
+button {
+    background-color: yellow;
+    height: 3em;
+    width: 10em;
+    border: 1px solid black; 
+    border-radius: 2em;
+}
+
+button:hover {
+    background-color: #b3b300;
+}
+p {
+    font-size: 3vh;
+}
